// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index All except customer write should audit all 1`] = `
[
  {
    "message": undefined,
    "permission": "store_v2_content",
    "result": true,
    "status": 400,
  },
  {
    "message": undefined,
    "permission": "store_v2_content_read_only",
    "result": true,
    "status": 200,
  },
  {
    "message": undefined,
    "permission": "store_content_checkout",
    "result": true,
    "status": 422,
  },
  {
    "message": undefined,
    "permission": "store_content_checkout_read_only",
    "result": true,
    "status": 422,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_customers",
    "result": false,
    "status": 403,
  },
  {
    "message": undefined,
    "permission": "store_v2_customers_read_only",
    "result": true,
    "status": 200,
  },
  {
    "message": undefined,
    "permission": "store_v2_information_read_only",
    "result": true,
    "status": 200,
  },
  {
    "message": undefined,
    "permission": "store_v2_marketing",
    "result": true,
    "status": 400,
  },
  {
    "message": undefined,
    "permission": "store_v2_marketing_read_only",
    "result": true,
    "status": 200,
  },
  {
    "message": undefined,
    "permission": "store_v2_orders",
    "result": true,
    "status": 400,
  },
  {
    "message": undefined,
    "permission": "store_v2_orders_read_only",
    "result": true,
    "status": 200,
  },
  {
    "message": undefined,
    "permission": "store_v2_order_transactions_read_only",
    "result": true,
    "status": 404,
  },
  {
    "message": undefined,
    "permission": "store_payments_access_token_create",
    "result": true,
    "status": 422,
  },
  {
    "message": undefined,
    "permission": "store_payments_methods_read",
    "result": true,
    "status": 200,
  },
  {
    "message": undefined,
    "permission": "store_v2_products",
    "result": true,
    "status": 422,
  },
  {
    "message": undefined,
    "permission": "store_v2_products_read_only",
    "result": true,
    "status": 200,
  },
  {
    "message": undefined,
    "permission": "store_themes_manage",
    "result": true,
    "status": 400,
  },
  {
    "message": undefined,
    "permission": "store_themes_read_only",
    "result": true,
    "status": 200,
  },
  {
    "message": undefined,
    "permission": "store_cart",
    "result": true,
    "status": 422,
  },
  {
    "message": undefined,
    "permission": "store_cart_read_only",
    "result": true,
    "status": 404,
  },
  {
    "message": undefined,
    "permission": "store_checkout",
    "result": true,
    "status": 404,
  },
  {
    "message": undefined,
    "permission": "store_checkout_read_only",
    "result": true,
    "status": 404,
  },
  {
    "message": undefined,
    "permission": "store_sites_read_only",
    "result": true,
    "status": 200,
  },
  {
    "message": undefined,
    "permission": "store_channel_settings",
    "result": true,
    "status": 422,
  },
  {
    "message": undefined,
    "permission": "store_channel_settings_read_only",
    "result": true,
    "status": 200,
  },
  {
    "message": undefined,
    "permission": "store_channel_listings",
    "result": true,
    "status": 422,
  },
  {
    "message": undefined,
    "permission": "store_channel_listings_read_only",
    "result": true,
    "status": 200,
  },
]
`;

exports[`index None except logs should audit 1`] = `
[
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_content",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_content_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_content_checkout",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_content_checkout_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_customers",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_customers_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": undefined,
    "permission": "store_v2_information_read_only",
    "result": true,
    "status": 200,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_marketing",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_marketing_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_orders",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_orders_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_order_transactions_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_payments_access_token_create",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_payments_methods_read",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_products",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_v2_products_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_themes_manage",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_themes_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_cart",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_cart_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_checkout",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_checkout_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_sites_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_channel_settings",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_channel_settings_read_only",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_channel_listings",
    "result": false,
    "status": 403,
  },
  {
    "message": "{"status":403,"title":"You don't have a required scope to access the endpoint","type":"https://developer.bigcommerce.com/api-docs/getting-started/api-status-codes","errors":{}}",
    "permission": "store_channel_listings_read_only",
    "result": false,
    "status": 403,
  },
]
`;
